--- a/dubbo-example-consumer/pom.xml
+++ b/dubbo-example-consumer/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.github.ralgond</groupId>
 		<artifactId>dubbo-example</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>dubbo-example-consumer</artifactId>
 
