--- a/dubbo-example-sdk/pom.xml
+++ b/dubbo-example-sdk/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.github.ralgond</groupId>
     <artifactId>dubbo-example</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
   </parent>
   <artifactId>dubbo-example-sdk</artifactId>
 </project>
