--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.ralgond</groupId>
 	<artifactId>dubbo-example</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<dubbo.version>2.7.1</dubbo.version>
+		<dubbo.example.version>0.0.3-SNAPSHOT</dubbo.example.version>
 	</properties>
 
 	<dependencyManagement>
@@ -30,13 +31,13 @@
 			<dependency>
 				<groupId>com.github.ralgond</groupId>
 				<artifactId>dubbo-example-sdk</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
+				<version>${dubbo.example.version}</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>com.github.ralgond</groupId>
 				<artifactId>dubbo-example-loadbalance</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
+				<version>${dubbo.example.version}</version>
 			</dependency>
 
 
