--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,49 @@
 	<properties>
 		<dubbo.version>2.7.1</dubbo.version>
 		<dubbo.example.version>0.0.3-SNAPSHOT</dubbo.example.version>
+		<spring-boot.version>2.3.0.RELEASE</spring-boot.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- Spring Boot -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<!-- Apache Dubbo -->
+			<dependency>
+				<groupId>org.apache.dubbo</groupId>
+				<artifactId>dubbo-dependencies-bom</artifactId>
+				<version>${dubbo.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.dubbo</groupId>
+				<artifactId>dubbo</artifactId>
+				<version>${dubbo.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+		
 			<!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo -->
 			<dependency>
 				<groupId>org.apache.dubbo</groupId>
@@ -27,6 +66,18 @@
 				<version>${dubbo.version}</version>
 				<type>pom</type>
 			</dependency>
+			
+			<dependency>
+            <groupId>com.alibaba.spring</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+        
+        <dependency>
+			<groupId>org.apache.dubbo</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>2.7.7</version>
+		</dependency>
 
 			<dependency>
 				<groupId>com.github.ralgond</groupId>
@@ -63,5 +114,6 @@
 		<module>dubbo-example-consumer</module>
 		<module>dubbo-example-provider</module>
 		<module>dubbo-example-loadbalance</module>
+		<module>dubbo-example-spring-boot-consumer</module>
 	</modules>
 </project>
