--- a/dubbo-example-provider/pom.xml
+++ b/dubbo-example-provider/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.github.ralgond</groupId>
 		<artifactId>dubbo-example</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.3</version>
 	</parent>
 	<artifactId>dubbo-example-provider</artifactId>
 
