--- a/dubbo-example-spring-boot-consumer/pom.xml
+++ b/dubbo-example-spring-boot-consumer/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.github.ralgond</groupId>
 		<artifactId>dubbo-example</artifactId>
-		<version>0.0.5-SNAPSHOT</version>
+		<version>0.0.5</version>
 	</parent>
 	<artifactId>dubbo-example-spring-boot-consumer</artifactId>
 
